--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -238,6 +238,10 @@ Version:1.0
 	-webkit-transition: all 0.4s ease;
 	-moz-transition: all 0.4s ease;
 	transition: all 0.4s ease;
+	font-weight: bolder;
+	font-size: xx-large;
+	color: #8C52FF;
+	
 }
 .header .navbar {
 	padding: 0;
